# A_Language

./: CMakeLists.txt  README.md  grammar.md
.github/workflows/: dep.yml
assets/: Parser_diagram.drawio
inc/: ast.hpp  lexer.hpp  parser.hpp  utils.hpp
src/: CMakeLists.txt  ast.cpp  lexer.cpp  main.cpp  mian.cpp  parser.cpp
test/: CMakeLists.txt  lexer_test.cpp  sample0.AL  sample1.AL  sample2.AL
